syntax = "proto3";

option go_package = "github.com/albertsen/lessworkflow/gen/proto/processdef";

package lessworkflow.processdef;

message ProcessDef {
    string id = 1;
    string description = 2;
    map<string, HandlerDef> handlers = 3;
    map<string, ActionDef> workflow = 4;
}

message HandlerDef {
    string url = 1;
}

message ActionDef {
    string handler = 1;
    map<string, string> transitions = 2;
}