syntax = "proto3";

package lessworkflow.processdefservice;

option go_package = "github.com/albertsen/lessworkflow/gen/proto/processdefservice";

import "proto/processdef/processdef.proto";

service ProcessDefService {
  rpc CreateProcessDef(CreateProcessDefRequest) returns (CreateProcessDefResponse) {}
  rpc UpdateProcessDef(UpdateProcessDefRequest) returns (UpdateProcessDefResponse) {}
  rpc GetProcessDef(GetProcessDefRequest) returns (GetProcessDefResponse) {}
  rpc DeleteProcessDef(DeleteProcessDefRequest) returns (DeleteProcessDefResponse) {}
  
}

message CreateProcessDefRequest {
  lessworkflow.processdef.ProcessDef processDef = 1;
}
message CreateProcessDefResponse {
  lessworkflow.processdef.ProcessDef processDef = 1;
}

message UpdateProcessDefRequest {
  lessworkflow.processdef.ProcessDef processDef = 1;
}
message UpdateProcessDefResponse {
  lessworkflow.processdef.ProcessDef processDef = 1;
}

message GetProcessDefRequest {
  string process_def_id = 1;
}
message GetProcessDefResponse {
  lessworkflow.processdef.ProcessDef processDef = 1;
}

message DeleteProcessDefRequest {
  string process_def_id = 1;
}
message DeleteProcessDefResponse {
}